--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
             <artifactId>bootstrap-connector</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+<!--        PDFBox-->
+        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.25</version>
+        </dependency>
+
     </dependencies>
 
     <build>
