--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <version>2.0.25</version>
         </dependency>
 
+<!--        Для определения типа системы - Windows/Linux-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
