Доработано масштабирование для PDF страниц формата не А4, осталось разобратсья с коэффициентами для нестандартных размеров по ширине/высоте и для горизонтальных документов

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 target/
 uploadedfiles/
 output/
-temp/
+temp/sign_image.jpg
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
